# qnxtest

./: CMakeLists.txt  README.md  main.cpp  qnx_build.sh
cmake/: qnx-toolchain-aarch64le.cmake
screen/: QnxScreen.h
